convex geometry created upon importing of a 3D model

--- a/src/demo.html
+++ b/src/demo.html
@@ -17,7 +17,7 @@
                 "three": "../node_modules/three/build/three.module.js",
                 "OrbitControls" : "../node_modules/three/examples/jsm/controls/OrbitControls.js",
                 "GLTFLoader" : "../node_modules/three/examples/jsm/loaders/GLTFLoader.js",
-                "gsap" : "../node_modules/gsap/index.js"
+                "ConvexGeometry" : "../node_modules/three/examples/jsm/geometries/ConvexGeometry.js"
             }
         }
     </script>
