Minor edit in UI

--- a/src/orbit-control-extendid/demo-ui.html
+++ b/src/orbit-control-extendid/demo-ui.html
@@ -1,6 +1,6 @@
 <div class="slider-container">
     <div class="row">
         <input id="offset" name="offset" type="range" min="300" max="1000" value="500" >
-        <label id="offsetLabel" for="minDistance">offset: 500</label>
+        <label id="offsetLabel" for="minDistance">max Distance: 500</label>
     </div>
 </div>
